# fleet-triage-agent

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
scripts/: check_deck.py  run.ps1
src/data/: simulate.py  validate.py
src/models/: train.py
src/reporting/: eda_stats.py  make_auto_deck.py  make_latest_aliases.py  triage_snapshot.py
src/utils/: artifacts.py
tests/: test_smoke.py
