[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-triage-agent"
version = "0.2.0"
description = "Fleet Maintenance Triage Agent (synthetic data + stats + calibrated ML + retrieval + Streamlit + auto deck)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ssavur"}]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "tqdm>=4.66",

  "lifelines>=0.28",
  "great-expectations>=0.18",
  "mlflow>=2.10",
  "streamlit>=1.30",

  "python-pptx>=0.6.23",
  "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3.0",
  "black>=24.1.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]